QXGEdit - Qt XG Editor
----------------------

ChangeLog

SVN TRUNK

- Global configuration state is now explicitly saved/committed to
  disk when Options dialog changes are accepted and applied.

- Variation part parameter is now a drop-down combo-box.

- New reset button for reverb, chorus and variation parameters.

- Randomization of all current vparameter values is now available,
  allowing for great experimentation and exploration of brand new
  sound settings (just try View/Randomize).

- All graphics lines are now slightly gray colored, instead of plain
  black or white, or whatever the current theme text color.

- Added user confirmation for QS300 user voice preset replacement;
  preset files are not deleted from file-system anymore.


0.0.1  2009-09-19  First public release.
